<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">AirPods Baterie</string>
    <string name="left_pod">Levé sluchátko</string>
    <string name="right_pod">Pravé sluchátko</string>
    <string name="case_pod">Pouzdro</string>
    <string name="headphones">Sluchátka</string>
    <string name="unknown_value">–</string>
    <string name="percent_format">%1$d %%</string>
    <string name="no_device">Zatím nic nenalezeno</string>
    <string name="waiting_short">Čekám na data</string>
    <string name="start_scan">Spustit hledání</string>
    <string name="stop_scan">Zastavit hledání</string>
    <string name="status_stopped">Hledání je zastavené.</string>
    <string name="status_scanning">Hledám AirPods v okolí…</string>
    <string name="status_found">Signál %1$d dBm · aktualizováno před %2$d s</string>
    <string name="status_lost">Sluchátka se přestala ozývat. Otevři pouzdro.</string>
    <string name="error_no_bluetooth">Toto zařízení nemá Bluetooth LE.</string>
    <string name="error_bluetooth_off">Bluetooth je vypnuté – zapni ho a zkus to znovu.</string>
    <string name="error_permission">Bez oprávnění k Bluetooth skenování to nepůjde.</string>
    <string name="error_scan_failed">Skenování selhalo. Zkus vypnout a zapnout Bluetooth.</string>
    <string name="charging">Nabíjí se</string>
    <string name="in_ear">V uchu</string>
    <string name="not_available">Nedostupné (v pouzdře nebo vypnuté)</string>
    <string name="hint">Jak to funguje: AirPods samy vysílají stav baterie v BLE inzerátu.\nJakmile se sluchátka připojí, aplikace začne stav držet v oznámení – nemusí být ani otevřená.\nPokud se nic neukazuje, otevři víko pouzdra poblíž telefonu nebo si sluchátka dej do uší.</string>

    <!-- Oznámení a služba na pozadí -->
    <string name="channel_name">Stav baterie</string>
    <string name="channel_description">Oznámení s nabitím AirPods, dokud jsou připojené.</string>
    <string name="notification_waiting_title">AirPods připojené</string>
    <string name="notification_waiting_text">Zjišťuji stav baterie…</string>
    <string name="notification_no_data">Baterie zatím není k dispozici</string>
    <string name="notification_age">Údaje jsou %1$d min staré</string>
    <string name="short_left">L</string>
    <string name="short_right">P</string>
    <string name="short_case">Pouzdro</string>
    <string name="short_headphones">Baterie</string>
    <string name="notify_switch">Držet baterii v oznámení, dokud jsou sluchátka připojená</string>
    <string name="notify_permission_needed">Bez povolení oznámení se stav nezobrazí ve stavovém řádku.</string>
    <string name="status_connected">Sluchátka jsou připojená · oznámení běží</string>
</resources>
